--- a/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking.yaml
@@ -1,7 +1,7 @@
 seed_everything: 42
 name: TRK-v0-full
 # ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/TRK-v0-full_20250630-T152409/ckpts/epoch=029-val_loss=0.61685.ckpt
-
+ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/src/logs/TRK-v0-full_20250820-T163706/ckpts/epoch=007-val_loss=18.58578.ckpt
 data:
   
   train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
@@ -12,11 +12,11 @@ data:
   hit_eval_val: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/ATLAS-Muon-v1_20250814-T223545/ckpts/epoch=049-val_acc=0.99711_valid_PU200_processed_eval.h5
   # hit_eval_test: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_test_data_eval.h5
   
-  num_workers: 20
+  num_workers: 100
   num_train: -1
   num_test: -1
   num_val: -1
-  batch_size: 100  # This can easily go up to 200 even for 24 GB vRAM
+  batch_size: 400  # This can easily go up to 200 even for 24 GB vRAM
   # use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
@@ -64,7 +64,7 @@ trainer:
   max_epochs: 50
   accelerator: gpu
   # devices: [2, 3]
-  devices: [1]
+  devices: -1
   precision: bf16-mixed
   log_every_n_steps: 10
   default_root_dir: logs
@@ -171,6 +171,7 @@ model:
                   - spacePoint_stationPhi
                   - spacePoint_stationEta
                   - spacePoint_technology
+                  - spacePoint_stationIndex
                   # # Add derived hit fields
                   - r  # Radial distance
                   - s  # 3D distance
@@ -179,7 +180,7 @@ model:
                 net:
                   class_path: hepattn.models.Dense
                   init_args:
-                    input_size: 21
+                    input_size: 22
                     output_size: *dim
                 posenc:
                   class_path: hepattn.models.posenc.FourierPositionEncoder
